# first

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  v7.1-gaps.md  vitest.config.ts  工作流全景文档.md  改造计划.md
.arch/: ARCH.md  annotations.json  graph_data.json  module_graph.mmd  scan_result.json  snapshot.json
.arch/viewer/: index.html
.claude/: settings.local.json
docs/: CODE_REFERENCE.md  INTERFACE_CATALOG.md  OPERATION_MANUAL.md  RPC_REFERENCE.md  full-change-action-checklist.md
docs/superpowers/plans/: 2026-03-20-desktop-transformation.md
docs/superpowers/specs/: 2026-03-20-desktop-transformation-design.md
lisan-desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
lisan-desktop/scripts/: bundle-size.test.mjs
lisan-desktop/src/: App.tsx  globals.css  main.tsx
lisan-desktop/src-tauri/: Cargo.toml  tauri.conf.json
lisan-desktop/src-tauri/capabilities/: default.json
lisan-desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs  state.rs
lisan-desktop/src-tauri/src/commands/: cli.rs  config.rs  executions.rs  files.rs  mod.rs  projects.rs
lisan-desktop/src/api/: cli.ts  index.ts
lisan-desktop/src/components/: SceneCard.tsx  SceneEditForm.tsx  TabPlaceholder.tsx  WorkflowStepCard.tsx
lisan-desktop/src/hooks/: useSidecar.ts  useWorkflowEvents.ts
lisan-desktop/src/lib/: store.ts  (+7 more)
plugins/webnovel/: package.json  tsconfig.json
血色天平/: lisan.config.yaml  outline.md
血色天平/chapters/: 001.md  002.md
血色天平/大纲/: arc-1.md
(+37 files in other folders)
